feat: support declined emergency contacts
